--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
 	</dependencies>
 
 	<build>
+		<testSourceDirectory>src</testSourceDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
